--- a/Lab1/Views/Student/Create.cshtml
+++ b/Lab1/Views/Student/Create.cshtml
@@ -6,50 +6,65 @@
   <div class="form-group">
     <label for="inputID">Mã sinh viên</label>
     <input type="text" class="form-control" id="inputID" asp-for="Id"  placeholder="Nhập mã sinh viên">
+    <span asp-validation-for="Id" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputName">Tên sinh viên</label>
     <input type="text" class="form-control" id="inputName" asp-for="Name" placeholder="Nhập tên sinh viên">
+    <span asp-validation-for="Name" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputEmail">Email</label>
     <input type="email" class="form-control" id="inputID" asp-for="Email" placeholder="Nhập email">
+    <span asp-validation-for="Email" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputPassword">Mật khẩu</label>
     <input type="password" class="form-control" id="inputPassword" asp-for="Password" placeholder="Nhập mật khẩu">
+    <span asp-validation-for="Password" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputAddress">Địa chỉ</label>
     <input type="text" class="form-control" id="inputAddress" asp-for="Address" placeholder="Nhập địa chỉ">
+    <span asp-validation-for="Address" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputBirth">Ngày sinh</label>
     <input type="date" class="form-control" id="inputBirth" asp-for="DateOfBirth">
+    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
   </div>
 
   <div class="form-group">
     <label for="inputBranch">Ngành học</label>
     <select class="form-control" id="inputBranch" asp-for="Branch">
+        <option value="">Chọn ngành học</option>
         <option value="IT">IT</option>
         <option value="BE">BE</option>
         <option value="CE">CE</option>
         <option value="EE">EE</option>
-       
     </select>
-  </div>
+    <span asp-validation-for="Branch" class="text-danger"></span>
+    </div>
   <div class="form-group">
     <label for="inputGender">Giới tính</label>
     <select class="form-control" id="inputGender" asp-for="@Model.Gender">
+        <option value="">Giới tính</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
     </select>
+    <span asp-validation-for="Gender" class="text-danger"></span>
   </div>
-  
+
+    <div class="form-group">
+        <label for="inputPoint">Điểm trung bình</label>
+        <input type="text" class="form-control" id="inputPoint" asp-for="Point">
+        <span asp-validation-for="Point" class="text-danger"></span>
+    </div>
+
   <button type="submit" class="btn btn-primary mt-3">ADD</button>
 </form>
