--- a/Lab1/Views/Student/Index.cshtml
+++ b/Lab1/Views/Student/Index.cshtml
@@ -30,6 +30,7 @@
       <th scope="col">Giới tính</th>
       <th scope="col">Địa chỉ</th>
       <th scope="col">Email</th>
+      <th scope="col">Điểm TB</th>
     </tr>
   </thead>
   <tbody>
@@ -63,6 +64,7 @@
               <td>@(student.Gender == Gender.Female ? "Nữ" : "Nam")</td>
               <td>@student.Address</td>
               <td>@student.Email</td>
+              <td>@student.Point</td>
             </tr>
         }
   </tbody>
